--- a/drivers/misc/mediatek/connectivity/Makefile
+++ b/drivers/misc/mediatek/connectivity/Makefile
@@ -69,6 +69,9 @@ endif
     obj-y += fmradio/
     obj-y += gps/
 
+# Bluetooth
+obj-$(CONFIG_MTK_COMBO_BT) += bt/mt66xx/legacy/
+
 # Otherwise we were called directly from the command line;
 # invoke the kernel build system.
 else
