--- a/arch/arm64/configs/begonia_user_defconfig
+++ b/arch/arm64/configs/begonia_user_defconfig
@@ -2261,7 +2261,6 @@ CONFIG_TOUCHSCREEN_PHYSICAL_ROTATION_WITH_LCM=y
 # CONFIG_TOUCHSCREEN_MTK_FOCALTECH_FHD is not set
 # CONFIG_TOUCHSCREEN_MTK_GT9157 is not set
 CONFIG_XIAOMI_SPI_TOUCH=y
-CONFIG_TOUCHSCREEN_NVT_DEBUG_FS=y
 CONFIG_TOUCHSCREEN_NT36xxx_HOSTDL_SPI_G7=y
 # CONFIG_TOUCHSCREEN_FTS8719 is not set
 CONFIG_TOUCHSCREEN_PROPERTIES=y
@@ -3645,7 +3644,7 @@ CONFIG_MTK_EMMC_HW_CQ=y
 # CONFIG_MMC_MTK is not set
 # CONFIG_MMC_MTK_LEGACY_SDIO is not set
 # CONFIG_MMC_MTK_SDIO is not set
-CONFIG_MTK_MMC_DEBUG=y
+# CONFIG_MTK_MMC_DEBUG is not set
 # CONFIG_MEMSTICK is not set
 CONFIG_NEW_LEDS=y
 CONFIG_LEDS_CLASS=y
@@ -4606,7 +4605,7 @@ CONFIG_SDFAT_DEFAULT_IOCHARSET="utf8"
 CONFIG_SDFAT_ALIGNED_MPAGE_WRITE=y
 CONFIG_SDFAT_VIRTUAL_XATTR=y
 CONFIG_SDFAT_VIRTUAL_XATTR_SELINUX_LABEL="u:object_r:sdcard_external:s0"
-CONFIG_SDFAT_DEBUG=y
+# CONFIG_SDFAT_DEBUG is not set
 # CONFIG_SDFAT_DBG_IOCTL is not set
 CONFIG_SDFAT_DBG_MSG=y
 # CONFIG_SDFAT_DBG_BUGON is not set
@@ -4728,12 +4727,10 @@ CONFIG_PRINTK_TIME=y
 CONFIG_CONSOLE_LOGLEVEL_DEFAULT=4
 CONFIG_MESSAGE_LOGLEVEL_DEFAULT=4
 # CONFIG_BOOT_PRINTK_DELAY is not set
-CONFIG_DYNAMIC_DEBUG=y
 
 #
 # Compile-time checks and compiler options
 #
-CONFIG_DEBUG_INFO=y
 # CONFIG_DEBUG_INFO_REDUCED is not set
 # CONFIG_DEBUG_INFO_SPLIT is not set
 # CONFIG_DEBUG_INFO_DWARF4 is not set
@@ -4745,7 +4742,6 @@ CONFIG_FRAME_WARN=2800
 # CONFIG_READABLE_ASM is not set
 # CONFIG_UNUSED_SYMBOLS is not set
 # CONFIG_PAGE_OWNER is not set
-CONFIG_DEBUG_FS=y
 # CONFIG_HEADERS_CHECK is not set
 # CONFIG_DEBUG_SECTION_MISMATCH is not set
 # CONFIG_SECTION_MISMATCH_WARN_ONLY is not set
