mm: Fix error using GCC 12
Signed-off-by: TeraaBytee <terabyte3766@gmail.com>

--- a/mm/Makefile
+++ b/mm/Makefile
@@ -4,6 +4,7 @@
 #
 
 subdir-ccflags-y += -Werror
+subdir-ccflags-y += $(call cc-option,-Wno-array-compare,)
 ccflags-y += -I$(srctree)/drivers/misc/mediatek/include
 
 ifdef CONFIG_MTK_ION
