defconfig: begonia: Enable MTK IO and touch boost

--- a/arch/arm64/configs/begonia_user_defconfig
+++ b/arch/arm64/configs/begonia_user_defconfig
@@ -1348,18 +1348,7 @@ CONFIG_MTK_BOUNCING_CHECK=y
 # Storage: EMMC, NAND, partition
 #
 CONFIG_MTK_GPT_SCHEME_SUPPORT=y
-
-#
-# Storage Block Tag
-#
-# CONFIG_MTK_BLOCK_TAG is not set
-# CONFIG_MTK_IO_BOOST is not set
-CONFIG_MTK_PID_MAP=y
-CONFIG_MTK_KEY_HINT=y
-
-#
-# Power, PMIC, Battery & Low Power related configs
-#
+CONFIG_MTK_IO_BOOST=y
 CONFIG_MTK_PMIC_NEW_ARCH=y
 CONFIG_MTK_PMIC_COMMON=y
 # CONFIG_MTK_PMIC_CHIP_MT6353 is not set
@@ -1803,7 +1792,7 @@ CONFIG_RT_REGMAP=y
 CONFIG_MTK_USB_TYPEC=y
 CONFIG_MTK_USB_TYPEC_U3_MUX=y
 CONFIG_TCPC_MT6360=y
-CONFIG_TCPC_ALERT_V20=y
+CONFIG_MTK_PERFMGR_TOUCH_BOOST=y
 CONFIG_MTK_TYPEC_WATER_DETECT=y
 CONFIG_MTK_TYPEC_WATER_DETECT_BY_PCB=y
 CONFIG_TCPC_CLASS=y
