--- a/arch/arm64/configs/begonia_user_defconfig
+++ b/arch/arm64/configs/begonia_user_defconfig
@@ -348,9 +348,23 @@ CONFIG_BLK_MQ_VIRTIO=y
 CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_CFQ=y
+CONFIG_IOSCHED_FIOPS=y
+CONFIG_IOSCHED_SIO=y
+CONFIG_IOSCHED_ZEN=y
+CONFIG_IOSCHED_ANXIETY=y
+CONFIG_MQ_IOSCHED_DEADLINE=y
+CONFIG_MQ_IOSCHED_KYBER=y
+CONFIG_IOSCHED_TRIPNDROID=y
+CONFIG_IOSCHED_BFQ=y
 # CONFIG_DEFAULT_DEADLINE is not set
-CONFIG_DEFAULT_CFQ=y
-# CONFIG_DEFAULT_NOOP is not set
+# CONFIG_DEFAULT_CFQ is not set
+# CONFIG_DEFAULT_ANXIETY is not set
+CONFIG_DEFAULT_NOOP=y
+# CONFIG_DEFAULT_BFQ is not set
+# CONFIG_DEFAULT_FIOPS is not set
+# CONFIG_DEFAULT_SIO is not set
+# CONFIG_DEFAULT_ZEN is not set
+# CONFIG_DEFAULT_TRIPNDROID is not set
 CONFIG_DEFAULT_IOSCHED="cfq"
 CONFIG_MQ_IOSCHED_DEADLINE=y
 CONFIG_MQ_IOSCHED_KYBER=y
