--- a/arch/arm64/configs/begonia_user_defconfig
+++ b/arch/arm64/configs/begonia_user_defconfig
@@ -350,6 +350,7 @@ CONFIG_IOSCHED_ZEN=y
 CONFIG_IOSCHED_ANXIETY=y
 CONFIG_MQ_IOSCHED_DEADLINE=y
 CONFIG_MQ_IOSCHED_KYBER=y
+CONFIG_IOSCHED_TRIPNDROID=y
 CONFIG_IOSCHED_BFQ=y
 # CONFIG_DEFAULT_DEADLINE is not set
 # CONFIG_DEFAULT_CFQ is not set
@@ -359,6 +360,7 @@ CONFIG_DEFAULT_NOOP=y
 # CONFIG_DEFAULT_FIOPS is not set
 # CONFIG_DEFAULT_SIO is not set
 # CONFIG_DEFAULT_ZEN is not set
+# CONFIG_DEFAULT_TRIPNDROID is not set
 CONFIG_DEFAULT_IOSCHED="cfq"
 CONFIG_ASN1=y
 CONFIG_UNINLINE_SPIN_UNLOCK=y
