--- a/arch/arm64/configs/begonia_user_defconfig
+++ b/arch/arm64/configs/begonia_user_defconfig
@@ -1970,6 +1970,7 @@ CONFIG_MTK_DRAM_LOG_STORE=y
 CONFIG_MTK_DRAM_LOG_STORE_ADDR=0x0011DF00
 CONFIG_MTK_DRAM_LOG_STORE_SIZE=0x100
 # CONFIG_PRINTK_MT_PREFIX is not set
+CONFIG_LTO_GCC=y
 CONFIG_MTK_PRINTK_UART_CONSOLE=y
 CONFIG_CONSOLE_LOCK_DURATION_DETECT=y
 # CONFIG_MTK_MLOG is not set
