--- a/arch/arm64/configs/begonia_user_defconfig
+++ b/arch/arm64/configs/begonia_user_defconfig
@@ -1253,6 +1253,7 @@ CONFIG_BLK_DEV=y
 # CONFIG_BLK_DEV_NULL_BLK is not set
 CONFIG_ZRAM=y
 CONFIG_ZRAM_WRITEBACK=y
+CONFIG_ZRAM_SIZE_OVERRIDE=4
 # CONFIG_ZRAM_MEMORY_TRACKING is not set
 CONFIG_ZRAM_SIZE_OVERRIDE=2
 # CONFIG_BLK_DEV_COW_COMMON is not set
